--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
-    "express": "^4.18.3",
-    "mysql": "^2.18.1"
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "pdfkit": "^0.15.0"
   }
 }
